fixed alignment of text in menu for selected nested item

--- a/source/_themes/sphinx_rtd_theme/static/css/custom.css
+++ b/source/_themes/sphinx_rtd_theme/static/css/custom.css
@@ -20,6 +20,7 @@
 	border-bottom: solid 1px #c9c9c9;
 	border-top: solid 1px #c9c9c9;
 	border-right: none;
+	padding-top: 0.3545em;
 	height: 30px;
 }
 
